# mcp-gateway

./: .gitignore  README.md  pyproject.toml
notes/: identity-propagation.md
src/mcp_gateway/: gateway.py  identity.py  local.py  multi_instance.py  remote.py
src/mcp_gateway/middleware/: __init__.py  image_downscale.py
src/mcp_gateway/static/: index.html  privacy.html  terms.html
tests/: test_gateway_multi_instance.py  test_identity.py  test_multi_instance.py
tests/manual/: multi_instance_e2e.py
